Background contrast possibly fixed

--- a/css/main.css
+++ b/css/main.css
@@ -151,7 +151,7 @@ body {
 
 .val-featured-image-menu {
   min-height: 800px;
-  background: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url(../img/shutterstock_1103021678.jpg);
+  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url(../img/menubg.png);
   /* These 3 rules are normally used in sets for centered background-images */
   background-repeat: no-repeat;
   background-size: cover;
@@ -642,7 +642,9 @@ footer {
   display: flex;
   justify-content: flex-end;
 }
+.footbox{
 
+}
 footer img {
   width: 40px;
 }
